# ai-pay

./: .gitignore  Cargo.toml  build.rs  pain.001.001.03.xsd  pay_10.bash  pay_1000.bash  postman.json
java/: pom.xml
java/src/main/java/com/example/aipay/: PaymentApplication.java
java/src/main/resources/: application.properties
rust/: Cargo.toml  pain.001.001.03.xml  pay_10.bash  pay_100.bash  pay_1000.bash
rust/src/: main.rs
src/: main.old  main.rs
tests/: test.rs  transactions.csv
