[package]
description = "Transforming Payment solutions in an Artificial intelligence world"
edition = "2021"
keywords = ["aipay"]
license = "MIT OR Apache-2.0"
name = "aipay"
repository = "https://github.com/sebastienrousseau/aipay/"
rust-version = "1.67.1"
version = "0.0.1"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.0"
prettytable-rs = "0.10.0"
rand = "0.8.5"
reqwest = "0.12"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_urlencoded = "0.7.1"

[dev-dependencies]
criterion = "0.4.0"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
debug = false            # Disable debug information
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental compilation
lto = true               # Enables link to optimizations
opt-level = "s"          # Optimize for binary size
overflow-checks = false  # Disable overflow checks
panic = "abort"          # Strip expensive panic clean-up logic
rpath = false            # Disable rpath
strip = "symbols"        # Automatically strip symbols from the binary.

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
